src/test/ui/moves/moves-based-on-type-match-bindings.stderr
error[E0382]: use of partially moved value: `x`
  --> $DIR/moves-based-on-type-match-bindings.rs:16:12
   |
LL |         Foo {f} => {}
   |              - value moved here
...
LL |     touch(&x); //~ ERROR use of partially moved value: `x`
   |            ^ value used here after move
   |
   = note: move occurs because `x.f` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
